--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_00"
-author: "Your Name here"
-date: "Year 2020"
+author: "Gael Gonzalez"
+date: "May 24, 2022"
 output: html_document
 ---
 
@@ -15,12 +15,68 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
+A BOAT beneath a sunny sky,
+
+Lingering onward dreamily
+
+In an evening of July --
+
+Children three that nestle near,
+
+Eager eye and willing ear
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+Something there is that doesn't love a wall,
+
+That sends the frozen-ground-swell under it,
+
+And spills the upper boulders in the sun;
+
+And makes gaps even two can pass abreast.
+
+The work of hunters is another thing
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
+The sun was shining on the sea,
 
+   Shining with all his might:
+   
+He did his very best to make
+
+   The billows smooth and bright—
+   
+And this was odd, because it was
+
+   The middle of the night.
+
+The moon was shining sulkily,
+
+   Because she thought the sun
+   
+Had got no business to be there
+
+   After the day was done—
+   
+"It's very rude of him," she said,
+
+   "To come and spoil the fun!"
+   
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+I stepped from plank to plank
+
+So slow and cautiously;
+
+The stars about my head I felt,
+
+About my feet the sea.
+
+I knew not but the next
+
+Would be my final inch, —
+
+This gave me that precarious gait
+
+Some call experience.
