--- a/poem.rmd
+++ b/poem.rmd
@@ -23,7 +23,7 @@ In an evening of July --
 
 Children three that nestle near,
 
-Eager eye and willing ear
+Eager eye and willing ear,
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
@@ -35,7 +35,7 @@ And spills the upper boulders in the sun;
 
 And makes gaps even two can pass abreast.
 
-The work of hunters is another thing
+The work of hunters is another thing,
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
